# cyberpunk_red_char_sheet

./: .gitignore  Cargo.toml  Cargo_deploy.toml  README.md  character.json  character_b.json  compile_and_tar.sh  pull_and_deploy.sh
.cargo/: config.toml
gear/: ammunition.json  ammunition_types.json  armor.db  armor.json  armor_sp.json  borgware.db  borgware.json  calibers.json  clean_data.py  convert_gear.py  cyberaudio.json  cyberdeck-hardware.json  cyberlimbs-cyberarm.db  cyberlimbs-cyberarm.json  cyberlimbs-cyberlegs.db  cyberlimbs-cyberlegs.json  cyberoptics.json  drugs.json  external-body-cyberware.json  fashion.json  fashionware.json  final_dict.json  internal-body-cyberware.db  internal-body-cyberware.json  items.db  items.json  neuralware.json  programs-attackers.json  programs-boosters.json  programs-defender.json  reset.py  weapons.json
gear/complex_items/: armor.json  attachments.json  borgware.json  cyberlimbs-cyberarm.json  cyberlimbs-cyberlegs.json  internal-body-cyberware.json  neuralware.json  weapons.json
gear/generation_data/: ammunition_types.json
gear/simple_items/: cyberdeck-hardware.json  items.json  programs-attackers.json  programs-boosters.json  (+1 more)
src/: add_skill_modal_view.rs  ammo_view.rs  app.rs  char.rs  gear.rs  gear_views.rs  help.rs  icon_views.rs  info_modal_view.rs  injury_view.rs  lib.rs  main.rs  modals.rs  netrun_view.rs  resource_views.rs  shop_modal_view.rs  skill_view.rs  text_views.rs
src/cp_char_data/: Cargo.toml
src/cp_char_data/src/: char.rs  critical_injury.rs  gear.rs  lib.rs
style/: animations.scss  main.scss
